--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Promo with Modal</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div class="promo__info">
+        <h3 class="promo__title">Демо-версия</h3>
+        <p class="promo__description">
+          За 18 лет деятельности было реализовано более 500 крупных, а так же,
+          не менее 2500 средних и малых проектов. Используя знания и накопленный
+          опыт мы можем предложить
+        </p>
+        <button class="promo__button">
+          Попробовать бесплатно
+          <div class="promo__button-icon">
+            <img src="./src/assets/arrow-up-right.png" alt="" />
+          </div>
+        </button>
+      </div>
+      <div class="promo__image">
+        <img src="./src/assets/promo.png" alt="Иллюстрация с компьютером" />
+      </div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
