feat: add scss structure with variables and text classes

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="stylesheet" href="./src/styles/main.scss" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Promo with Modal</title>
   </head>
@@ -18,18 +19,21 @@
         <button class="promo__button">
           Попробовать бесплатно
           <div class="promo__button-icon">
-            <img src="./src/assets/arrow-up-right.png" alt="" />
+            <img src="./src/assets/images/arrow-up-right.png" alt="" />
           </div>
         </button>
       </div>
       <div class="promo__image">
-        <img src="./src/assets/promo.png" alt="Иллюстрация с компьютером" />
+        <img
+          src="./src/assets/images/promo.png"
+          alt="Иллюстрация с компьютером"
+        />
       </div>
     </div>
     <div class="modal__wrapper">
       <div class="modal__content">
         <div class="modal__close-btn">
-          <img src="./src/assets/cross.png" alt="" />
+          <img src="./src/assets/images/cross.png" alt="" />
         </div>
         <form action="" class="modal__form form">
           <h4 class="form__title">Войти в систему</h4>
