feat: add styles for promo page and modal and adaptive layout for promo page

--- a/index.html
+++ b/index.html
@@ -8,35 +8,38 @@
     <title>Promo with Modal</title>
   </head>
   <body>
-    <div id="app">
-      <div class="promo__info">
-        <h3 class="promo__title">Демо-версия</h3>
-        <p class="promo__description">
-          За 18 лет деятельности было реализовано более 500 крупных, а так же,
-          не менее 2500 средних и малых проектов. Используя знания и накопленный
-          опыт мы можем предложить
-        </p>
-        <button class="promo__button">
-          Попробовать бесплатно
-          <div class="promo__button-icon">
-            <img src="./src/assets/images/arrow-up-right.png" alt="" />
-          </div>
-        </button>
-      </div>
-      <div class="promo__image">
-        <img
-          src="./src/assets/images/promo.png"
-          alt="Иллюстрация с компьютером"
-        />
+    <div class="wrapper">
+      <div class="promo">
+        <div class="promo__info">
+          <h3 class="promo__title h3">Демо-версия</h3>
+          <p class="promo__description caption">
+            За 18 лет деятельности было реализовано более 500 крупных, а так же,
+            не менее 2500 средних и малых проектов. Используя знания и
+            накопленный опыт мы можем предложить
+          </p>
+          <button class="promo__button button button--rounded">
+            Попробовать бесплатно
+            <div class="promo__button-icon button__icon">
+              <img src="./src/assets/images/arrow-up-right.png" alt="" />
+            </div>
+          </button>
+        </div>
+        <div class="promo__image">
+          <img
+            src="./src/assets/images/promo.png"
+            alt="Иллюстрация с компьютером"
+          />
+        </div>
       </div>
     </div>
+
     <div class="modal__wrapper">
       <div class="modal__content">
         <div class="modal__close-btn">
           <img src="./src/assets/images/cross.png" alt="" />
         </div>
         <form action="" class="modal__form form">
-          <h4 class="form__title">Войти в систему</h4>
+          <h4 class="form__title h4">Войти в систему</h4>
           <input type="text" class="form__input" placeholder="Email/Телефон" />
           <input type="password" class="form__input" placeholder="Пароль" />
           <label class="form__label">
@@ -44,8 +47,10 @@
             Запомнить пароль
           </label>
           <a href="/" class="form__link">Восстановить</a>
-          <button type="submit" class="form__button">Войти</button>
-          <button type="submit" class="form__button">Зарегестрироваться</button>
+          <button type="submit" class="form__button button">Войти</button>
+          <button type="submit" class="form__button button button--secondary">
+            Зарегистрироваться
+          </button>
         </form>
       </div>
     </div>
