feat: add open and close modal functionality

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             не менее 2500 средних и малых проектов. Используя знания и
             накопленный опыт мы можем предложить
           </p>
-          <button class="promo__button button button--rounded">
+          <button id="tryButton" class="promo__button button button--rounded">
             Попробовать бесплатно
             <div class="promo__button-icon button__icon">
               <img src="./src/assets/images/arrow-up-right.png" alt="" />
@@ -33,12 +33,12 @@
       </div>
     </div>
 
-    <div class="wrapper">
+    <div id="modal" class="wrapper modal">
       <div class="modal__wrapper">
         <div class="modal__content">
-          <div class="modal__close-btn">
+          <button id="closeModalButton" class="modal__close-btn">
             <img src="./src/assets/images/cross.png" alt="" />
-          </div>
+          </button>
           <form action="" class="modal__form form">
             <h4 class="form__title h4">Войти в систему</h4>
             <input
